--- a/src/assets/sass/utils/_variables.scss
+++ b/src/assets/sass/utils/_variables.scss
@@ -22,6 +22,7 @@ $pink-medium: #fd5181;
 // GREY
 $grey-light: #dedede;
 $grey-medium: #74798c;
+$grey-dark: #282D30;
 
 // BASICS
 $white: #ffffff;
