--- a/src/assets/sass/components/dashboard/_linechart.scss
+++ b/src/assets/sass/components/dashboard/_linechart.scss
@@ -1,4 +1,5 @@
 .linechart-container {
+    grid-area: linechart;
     position: relative;
     .custom-tooltip-linechart {
         background-color: $white;
