--- a/src/assets/sass/components/dashboard/_radialbarchart.scss
+++ b/src/assets/sass/components/dashboard/_radialbarchart.scss
@@ -1,5 +1,7 @@
 .container-radialbarchart {
-    background-color: #fbfbfb;
-    display: flex;
-    width: 200px;
+    grid-area: radialbarchart;
+
+    .radialbarchart {
+        background-color: #fbfbfb;
+    }
 }
