--- a/src/assets/sass/components/dashboard/_radialbarchart.scss
+++ b/src/assets/sass/components/dashboard/_radialbarchart.scss
@@ -1,5 +1,7 @@
 .container-radialbarchart {
     grid-area: radialbarchart;
+    border-radius: 10px;
+    overflow: hidden;
 
     .radialbarchart {
         background-color: #fbfbfb;
