--- a/src/assets/sass/components/dashboard/_linechart.scss
+++ b/src/assets/sass/components/dashboard/_linechart.scss
@@ -1,6 +1,8 @@
 .linechart-container {
     grid-area: linechart;
     position: relative;
+    border-radius: 10px;
+    overflow: hidden;
     .custom-tooltip-linechart {
         background-color: $white;
         border-radius: 4px;
