--- a/src/assets/sass/components/dashboard/_barchart.scss
+++ b/src/assets/sass/components/dashboard/_barchart.scss
@@ -1,6 +1,8 @@
 .barchart-container {
     grid-area: barchart;
     margin-bottom: 40px;
+    max-width: 1000px;
+    width: 100%;
     .recharts-legend-item-text {
         color: $grey-medium !important;
     }
