--- a/src/assets/sass/components/dashboard/_linechart.scss
+++ b/src/assets/sass/components/dashboard/_linechart.scss
@@ -3,6 +3,8 @@
     position: relative;
     border-radius: 10px;
     overflow: hidden;
+    max-width: 300px;
+    width: 100%;
     .custom-tooltip-linechart {
         background-color: $white;
         border-radius: 4px;
