--- a/src/assets/sass/components/dashboard/_nutrition-infos.scss
+++ b/src/assets/sass/components/dashboard/_nutrition-infos.scss
@@ -5,7 +5,7 @@
     grid-gap: 40px;
     align-content: space-around;
 
-    @media (max-width: 1351px) {
+    @media screen and (max-width: 1351px) {
         grid-gap: 0;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         align-content: space-between;
