--- a/src/assets/sass/components/dashboard/_radialbarchart.scss
+++ b/src/assets/sass/components/dashboard/_radialbarchart.scss
@@ -2,6 +2,8 @@
     grid-area: radialbarchart;
     border-radius: 10px;
     overflow: hidden;
+    max-width: 300px;
+    width: 100%;
 
     .radialbarchart {
         background-color: #fbfbfb;
