--- a/src/assets/sass/components/dashboard/_welcome.scss
+++ b/src/assets/sass/components/dashboard/_welcome.scss
@@ -2,7 +2,7 @@
     margin-top: 40px;
     margin-bottom: 68px;
     grid-area: welcome;
-    @media (max-width: 1351px) {
+    @media screen and (max-width: 1351px) {
         margin-bottom: 40px;
     }
 
