--- a/src/assets/sass/components/dashboard/_radialbarchart.scss
+++ b/src/assets/sass/components/dashboard/_radialbarchart.scss
@@ -1,5 +1,9 @@
 .container-radialbarchart {
     grid-area: radialbarchart;
+    border-radius: 10px;
+    overflow: hidden;
+    max-width: 300px;
+    width: 100%;
 
     .radialbarchart {
         background-color: #fbfbfb;
