fetchData for mock try/catch and pages error initialized

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -9,6 +9,8 @@
 @import './components/dashboard/radialbarchart';
 @import './components/dashboard/nutrition-infos';
 @import './components/dashboard/welcome';
+@import './components/error/error';
+@import './components/choiceuser/choiceuser';
 
 * {
     font-family: $font1;
