--- a/src/assets/sass/components/layout/_header.scss
+++ b/src/assets/sass/components/layout/_header.scss
@@ -26,5 +26,11 @@ header {
         align-items: center;
         font-size: 24px;
         cursor: pointer;
+
+        a {
+            color: $white;
+            text-decoration: none;
+        }
     }
+
 }
