--- a/src/assets/sass/components/layout/_header.scss
+++ b/src/assets/sass/components/layout/_header.scss
@@ -3,7 +3,7 @@ header {
     padding: 20px 20px 20px 30px;
     position: relative;
     z-index: 1;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 
     ul {
         display: flex;
